# pomia-rs

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config
.vim/: coc-settings.json
src/: clock.rs  display.rs  main.rs  tone.rs
