[package]
name = "pomia-rs"
version = "0.1.0"
authors = ["VersBinarii <versbinarii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release.package."*"]
opt-level = "z" 

[dependencies]
embedded-hal = "0.2.4"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "1"
panic-halt = "0.2.0"
cortex-m-rtic = "0.6.0-alpha.0"
rtic-core = "0.3.1"
st7735-lcd = "0.8.0-alpha.1"
embedded-graphics = "0.7.0-alpha.2"
heapless = {version = "0.5.6", features = ["ufmt-impl"]}
bme280 = {git = "https://github.com/VersBinarii/bme280-rs", features=["ufmt-impl"]}
ufmt = "0.1.0"

[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["stm32f103", "medium", "rt"]
